spring version updates